--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "recharts": "^2.1.5",
+    "sass": "^1.56.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
